syntax = "proto3";

package kodec;

// PLEASE DO NOT DELETE THIS COMMENT!!!
// bag id = 0
// message RequestPackage
// message ResponsePackage
//message Msg{
//    string to = 1;//prepare for group chat, use string type instead of int64
//    int64 from = 2; //omitted for up msg
//    enum Type {
//        UNKNOWN = 0;
//        TXT = 1;
//        IMG = 2;
//        VOICE = 3;
//        SYS = 4;
//        CARD = 5;
//        GIF = 6;
//        NEWS = 7;
//        FILE = 8;
//    }
//    Type tp = 3; // message type
//    string desc = 4; //support unknown message type
//
//    //d has different meanings for different type:
//    //TXT & SYS: text content
//    //IMG: image binary
//    //VOICE: voice binary
//    //CARD: Card binary
//    bytes d = 5;
//    int64 ct = 6; //omitted for up msg
//    repeated Meta meta = 7;
//    string id = 8; //id
//    repeated int64 at = 9; //@user
//}

// the user card
//message Card{
//    int64 uid = 1;
//    string name = 2;
//    string icon = 3;//url for icon
//}

//message File{
//    string name = 1;
//    int64 size = 2; // file size, unit B
//    string dl = 3; //download url
//    enum Type {
//        UNKNOWN = 0;
//        PDF = 1;
//        DOC = 2; // doc & docx
//        XLS = 3; // xls & xlsx
//        PPT = 4; // ppt、pptx、pps...
//        IMG = 5; //png、gif、jpeg、jpg、bmp...
//        TXT = 6;
//    }
//    Type tp = 4;
//    bytes d = 5;  // img thumbnail data
//    //原始文件，默认值true
//    bool original = 6;
//}

// bag id = 1
message Cmd {
    enum Type {
        UNKNOWN = 0;
        UNAUTHORIZED = 1;
        PING = 2;
        PONG = 3;
        KICK = 4;
        LEAVEROOM = 5;
        CLOSED = 6;
    }
    Type tp = 1;
    int64 ct = 2;
    bytes d = 3;
    string txt = 4;             // support unknown message type


    message Ping {
        string groupId = 1;         // default "",
    }

    message Pong {
        int64 userSize = 1;
    }

    message UnAuthorized {
        string reason = 1;
    }

    message Kick {
        string userId = 1;
        string reason = 2;
    }

    message Closed {
        string reason = 1;
    }
}

// bag id = 2
message Ack {
    string id = 1;
}

// bag id = 3
message Free  {
    enum Type {
        UNKNOWN = 0;
        LASERPEN = 1;       // 激光笔
    }
    Type tp = 1;
    int64 ct = 2;           // 上行数据不传递
    bytes d = 3;            // 数据内容
}
